hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__struct_instantiation_out_of_order.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Ok(
    Hir {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "S",
            IdentId(2) => "f1",
            IdentId(3) => "number",
            IdentId(4) => "f2",
            IdentId(5) => "boolean",
            IdentId(6) => "s1",
            IdentId(7) => "s2",
            IdentId(8) => "core",
            IdentId(9) => "add",
            IdentId(10) => "div",
            IdentId(11) => "eq",
            IdentId(12) => "ge",
            IdentId(13) => "gt",
            IdentId(14) => "le",
            IdentId(15) => "lt",
            IdentId(16) => "mul",
            IdentId(17) => "neg",
            IdentId(18) => "neq",
            IdentId(19) => "sub",
            IdentId(20) => "void",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(3),
                    span: 2:24; [24, 30],
                    symbol_id: SymbolId(5),
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(5),
                    span: 2:36; [36, 43],
                    symbol_id: SymbolId(6),
                },
            },
            IdentRefId(2) => IdentifierRef {
                id: IdentRefId(2),
                ident: Identifier {
                    id: IdentId(2),
                    span: 3:22; [69, 71],
                    symbol_id: SymbolId(20),
                },
            },
            IdentRefId(3) => IdentifierRef {
                id: IdentRefId(3),
                ident: Identifier {
                    id: IdentId(4),
                    span: 3:29; [76, 78],
                    symbol_id: SymbolId(21),
                },
            },
            IdentRefId(4) => IdentifierRef {
                id: IdentRefId(4),
                ident: Identifier {
                    id: IdentId(1),
                    span: 3:18; [65, 66],
                    symbol_id: SymbolId(3),
                },
            },
            IdentRefId(5) => IdentifierRef {
                id: IdentRefId(5),
                ident: Identifier {
                    id: IdentId(4),
                    span: 4:22; [110, 112],
                    symbol_id: SymbolId(21),
                },
            },
            IdentRefId(6) => IdentifierRef {
                id: IdentRefId(6),
                ident: Identifier {
                    id: IdentId(2),
                    span: 4:33; [121, 123],
                    symbol_id: SymbolId(20),
                },
            },
            IdentRefId(7) => IdentifierRef {
                id: IdentRefId(7),
                ident: Identifier {
                    id: IdentId(1),
                    span: 4:18; [106, 107],
                    symbol_id: SymbolId(3),
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(1),
                        span: 3:26; [73, 74],
                    },
                ),
                span: 3:26; [73, 74],
                type_id: TypeId(4),
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Literal(
                    Literal {
                        kind: Boolean(true),
                        span: 3:33; [80, 84],
                    },
                ),
                span: 3:33; [80, 84],
                type_id: TypeId(3),
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: StructInstantiation(
                    IdentRefId(4),
                    [],
                    [
                        (
                            IdentRefId(2),
                            ExprId(0),
                        ),
                        (
                            IdentRefId(3),
                            ExprId(1),
                        ),
                    ],
                ),
                span: 3:18; [65, 87],
                type_id: TypeId(6),
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: Literal(
                    Literal {
                        kind: Boolean(false),
                        span: 4:26; [114, 119],
                    },
                ),
                span: 4:26; [114, 119],
                type_id: TypeId(3),
            },
            ExprId(4) => Expression {
                id: ExprId(4),
                kind: Literal(
                    Literal {
                        kind: Number(2),
                        span: 4:37; [125, 126],
                    },
                ),
                span: 4:37; [125, 126],
                type_id: TypeId(4),
            },
            ExprId(5) => Expression {
                id: ExprId(5),
                kind: StructInstantiation(
                    IdentRefId(7),
                    [],
                    [
                        (
                            IdentRefId(5),
                            ExprId(3),
                        ),
                        (
                            IdentRefId(6),
                            ExprId(4),
                        ),
                    ],
                ),
                span: 4:18; [106, 129],
                type_id: TypeId(6),
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                        symbol_id: SymbolId(1),
                    },
                    InputId(0),
                    [
                        StmtId(1),
                        StmtId(2),
                        StmtId(3),
                        StmtId(4),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Struct(
                    Identifier {
                        id: IdentId(1),
                        span: 2:16; [16, 17],
                        symbol_id: SymbolId(3),
                    },
                    [],
                    Provided(
                        [
                            Field {
                                identifier: Identifier {
                                    id: IdentId(2),
                                    span: 2:20; [20, 22],
                                    symbol_id: SymbolId(20),
                                },
                                type_def_id: TypeDefId(0),
                                span: 2:20; [20, 30],
                                type_id: TypeId(4),
                            },
                            Field {
                                identifier: Identifier {
                                    id: IdentId(4),
                                    span: 2:32; [32, 34],
                                    symbol_id: SymbolId(21),
                                },
                                type_def_id: TypeDefId(1),
                                span: 2:32; [32, 43],
                                type_id: TypeId(3),
                            },
                        ],
                    ),
                    None,
                ),
                span: 2:9; [9, 46],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Let(
                    Identifier {
                        id: IdentId(6),
                        span: 3:13; [60, 62],
                        symbol_id: SymbolId(22),
                    },
                    ExprId(2),
                ),
                span: 3:9; [56, 88],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: Let(
                    Identifier {
                        id: IdentId(7),
                        span: 4:13; [101, 103],
                        symbol_id: SymbolId(23),
                    },
                    ExprId(5),
                ),
                span: 4:9; [97, 130],
            },
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: Namespace(
                    Identifier {
                        id: IdentId(8),
                        span: 6:11; [150, 154],
                        symbol_id: SymbolId(2),
                    },
                    InputId(0),
                    [],
                ),
                span: 6:17; [156, 157],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(0),
                    ],
                ),
                span: 2:24; [24, 30],
            },
            TypeDefId(1) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(1),
                    ],
                ),
                span: 2:36; [36, 43],
            },
        ],
        root: StmtId(0),
        symbols: [
            SymbolId(0) => Symbol {
                id: SymbolId(0),
                kind: NotFound,
                type_id: TypeId(0),
            },
            SymbolId(1) => Symbol {
                id: SymbolId(1),
                kind: Namespace(
                    IdentId(0),
                    {
                        IdentId(1): [
                            SymbolId(3),
                        ],
                        IdentId(8): [
                            SymbolId(2),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(2) => Symbol {
                id: SymbolId(2),
                kind: Namespace(
                    IdentId(8),
                    {
                        IdentId(3): [
                            SymbolId(5),
                        ],
                        IdentId(5): [
                            SymbolId(6),
                        ],
                        IdentId(9): [
                            SymbolId(19),
                        ],
                        IdentId(10): [
                            SymbolId(18),
                        ],
                        IdentId(11): [
                            SymbolId(16),
                            SymbolId(17),
                        ],
                        IdentId(12): [
                            SymbolId(15),
                        ],
                        IdentId(13): [
                            SymbolId(14),
                        ],
                        IdentId(14): [
                            SymbolId(13),
                        ],
                        IdentId(15): [
                            SymbolId(12),
                        ],
                        IdentId(16): [
                            SymbolId(11),
                        ],
                        IdentId(17): [
                            SymbolId(10),
                        ],
                        IdentId(18): [
                            SymbolId(8),
                            SymbolId(9),
                        ],
                        IdentId(19): [
                            SymbolId(7),
                        ],
                        IdentId(20): [
                            SymbolId(4),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: Struct(
                    IdentId(1),
                    StmtId(1),
                ),
                type_id: TypeId(6),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: NativeType(
                    IdentId(20),
                    Void,
                ),
                type_id: TypeId(2),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: NativeType(
                    IdentId(3),
                    Number,
                ),
                type_id: TypeId(2),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: NativeType(
                    IdentId(5),
                    Boolean,
                ),
                type_id: TypeId(2),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: Native(
                    IdentId(19),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(18),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(18),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(9),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(17),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(10),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(9),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: Field(
                    IdentId(2),
                    StmtId(1),
                    0,
                ),
                type_id: TypeId(4),
            },
            SymbolId(21) => Symbol {
                id: SymbolId(21),
                kind: Field(
                    IdentId(4),
                    StmtId(1),
                    1,
                ),
                type_id: TypeId(3),
            },
            SymbolId(22) => Symbol {
                id: SymbolId(22),
                kind: Let(
                    IdentId(6),
                    StmtId(2),
                ),
                type_id: TypeId(6),
            },
            SymbolId(23) => Symbol {
                id: SymbolId(23),
                kind: Let(
                    IdentId(7),
                    StmtId(3),
                ),
                type_id: TypeId(6),
            },
        ],
        types: [
            TypeId(0) => Invalid,
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Type,
            TypeId(6) => Struct(
                StmtId(1),
                [],
            ),
            TypeId(7) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(8) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(9) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(10) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
        ],
        exit_points: ExitPoints {
            exit_points: {},
            unreachable: [],
        },
    },
)
